--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "grenade",
   "version": "0.0.0",
+  "private": true,
   "dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.1",
@@ -36,5 +37,9 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "scripts": {}
+  "scripts": {},
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/grenade/grenade-ng.git"
+  }
 }
