--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ script:
 - bash ./publish.sh
 env:
   global:
-  - GIT_NAME: Travis-CI
-  - GIT_EMAIL: rthijssen@gmail.com
+  - GIT_NAME: "Travis CI"
+  - GIT_EMAIL: builds@travis-ci.org
   - GH_REF: github.com/grenade/grenade.github.io.git
   - GH_PAGES_BRANCH: master
   - GH_PAGES_SUBDIR: cv
