--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
+    "jquery": "1.9.1 - 2",
     "angular-scenario": "~1.3.0"
   },
   "appPath": "app",
