--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 sudo: false
 language: node_js
-before_install:
-- gem install sass compass
 node_js:
-- iojs
+  - node
+before_install:
+- npm install -g npm bower grunt-cli
+- rvm install 2.0.0
+- gem install sass compass
 before_script:
-- npm install -g bower grunt-cli
 - bower install
 script:
 - grunt build
