--- a/bower.json
+++ b/bower.json
@@ -2,26 +2,27 @@
   "name": "grenade",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
-    "json3": "^3.3.0",
-    "es5-shim": "^4.0.0",
+    "angular": "^1.7.2",
+    "json3": "^3.3.2",
+    "es5-shim": "^4.5.10",
     "bootstrap-sass-official": "^3.2.0",
-    "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-messages": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0",
-    "angular-markdown-directive": "~0.3.1"
+    "angular-animate": "^1.7.2",
+    "angular-cookies": "^1.7.2",
+    "angular-messages": "^1.7.2",
+    "angular-resource": "^1.7.2",
+    "angular-route": "^1.7.2",
+    "angular-sanitize": "^1.7.2",
+    "angular-touch": "^1.7.2",
+    "angular-markdown-directive": "^0.3.1",
+    "bootstrap-sass": "bootstrap-sass-official#^3.3.7"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.0",
-    "jquery": "1.9.1 - 2",
-    "angular-scenario": "~1.3.0"
+    "angular-mocks": "^1.7.2",
+    "jquery": "^3.3.1",
+    "angular-scenario": "^1.7.2"
   },
   "appPath": "app",
   "resolutions": {
-    "angular": "^1.3.0"
+    "angular": "^1.7.2"
   }
 }
