--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
   "name": "grenade",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "serve-static": "^1.13.2"
+  },
   "devDependencies": {
     "grunt": "^1.0.3",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-compass": "^1.1.1",
     "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-connect": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.1",
-    "grunt-contrib-htmlmin": "^2.4.0",
-    "grunt-contrib-imagemin": "^2.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-cssmin": "^3.0.0",
+    "grunt-contrib-htmlmin": "^3.0.0",
+    "grunt-contrib-imagemin": "^3.1.0",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-filerev": "^2.3.1",
     "grunt-google-cdn": "^0.4.0",
-    "grunt-karma": "^2.0.0",
+    "grunt-karma": "^3.0.1",
     "grunt-newer": "^1.3.0",
     "grunt-ng-annotate": "^3.0.0",
     "grunt-svgmin": "^5.0.0",
@@ -28,11 +30,11 @@
     "grunt-wiredep": "^3.0.1",
     "jasmine-core": "^3.1.0",
     "jshint-stylish": "^2.2.1",
-    "karma": "^2.0.4",
-    "karma-jasmine": "^1.1.2",
+    "karma": "^4.0.0",
+    "karma-jasmine": "^2.0.1",
     "karma-phantomjs-launcher": "^1.0.4",
     "load-grunt-tasks": "^4.0.0",
-    "time-grunt": "^1.4.0"
+    "time-grunt": "^2.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
